--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     box-shadow: -1px 42px 5px -1px rgba(0,0,0,0.72);
     -webkit-box-shadow: -1px 42px 5px -1px rgba(0,0,0,0.72);
     -moz-box-shadow: -1px 42px 5px -1px rgba(0,0,0,0.72);
+    object-fit: cover;
 
 }
 
